draft part on linear model

--- a/css/remark.css
+++ b/css/remark.css
@@ -4,6 +4,8 @@
 /*from default fonts*/
 
 @import url('https://fonts.googleapis.com/css?family=IBM+Plex+Sans:300,300i&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Dancing+Script&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Petit+Formal+Script&display=swap');
 
 body {
   font-family: 'IBM Plex Sans', sans-serif;
@@ -178,4 +180,12 @@ th, td { padding: 5px; }
 .remark-code-line-highlighted {
   border-radius: 7px;
   background-image: linear-gradient(to right, rgb(251, 241, 193), #ffffff) !important;
+}
+
+/* text classes --------------------------- */
+
+.big-formula {
+  font-size: 100px;
+  font-style: italic;
+  vertical-align: middle;
 }
