--- a/css/remark.css
+++ b/css/remark.css
@@ -4,8 +4,7 @@
 /*from default fonts*/
 
 @import url('https://fonts.googleapis.com/css?family=IBM+Plex+Sans:300,300i&display=swap');
-@import url('https://fonts.googleapis.com/css?family=Dancing+Script&display=swap');
-@import url('https://fonts.googleapis.com/css?family=Petit+Formal+Script&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Playfair+Display:400,600i&display=swap');
 
 body {
   font-family: 'IBM Plex Sans', sans-serif;
@@ -186,6 +185,7 @@ th, td { padding: 5px; }
 
 .big-formula {
   font-size: 100px;
+  font-family: 'Playfair Display', serif;
   font-style: italic;
   vertical-align: middle;
 }
